fixed overflow issue

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -46,6 +46,9 @@ font-family: $heading;
   padding: 10px;
   border-radius: 2rem;
   margin: .5rem auto;
+}
+
+.overflow-fix {
   overflow: auto;
 }
 
